--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 ndarray = "0.15.6"
+rten = "0.13.1"
+rten-tensor = "0.13.1"
 ort = "=2.0.0-rc.4"
 serde = { version = "1.0.208", features = ["derive"], optional = true }
 
@@ -22,3 +24,6 @@ approx = "0.5.1"
 hound = "3.5.1"
 serde = { version = "1.0.208", features = ["derive"] }
 serde_json = "1.0.125"
+
+[profile.dev.package.rten]
+opt-level = 2
